fix toList for jvm version
Signed-off-by: zhichao-aws <zhichaog@amazon.com>